fix: adjust tooltip z-index

--- a/src/components/Word/Word.module.scss
+++ b/src/components/Word/Word.module.scss
@@ -1,41 +1,20 @@
-$bg-padding: 4px;
-
 .word {
   position: relative;
   display: inline;
+  border-radius: 2px;
 
-  &::after {
-    content: "";
-    position: absolute;
-    inset: -$bg-padding;
-    width: calc(100% + (#{$bg-padding} * 2));
-    height: calc(100% + #{$bg-padding} * 2);
-    background: var(--surface-light);
-    border-radius: 3px;
-    opacity: 0;
-    z-index: -1;
-  }
-
-  &:hover {
-    cursor: pointer;
-
-    &::after {
-      opacity: 1;
-    }
-  }
-
+  &:hover,
   &.is-active {
-    z-index: 10;
-
-    &::after {
-      opacity: 1;
-    }
+    background: var(--surface-light);
+    box-shadow: 0 0 0 4px var(--surface-light);
+    cursor: pointer;
+    isolation: isolate;
+    z-index: 2;
   }
 
   &.is-closing {
-    &::after {
-      opacity: 0;
-    }
+    background: transparent;
+    box-shadow: unset;
     z-index: unset;
   }
 }
