--- a/src/components/WordTooltip/WordTooltip.module.scss
+++ b/src/components/WordTooltip/WordTooltip.module.scss
@@ -7,8 +7,6 @@ $panel-transition-mobile: translateY(80%);
   left: 0;
   width: 100%;
   height: 100%;
-  isolation: isolate;
-  z-index: 1;
 
   &.is-visible {
     .tooltip-panel {
@@ -39,6 +37,8 @@ $panel-transition-mobile: translateY(80%);
 
 .tooltip-position-wrapper {
   position: absolute;
+  isolation: isolate;
+  z-index: 3;
 
   @media (max-width: 640px) {
     position: fixed;
@@ -65,9 +65,9 @@ $panel-transition-mobile: translateY(80%);
 
   @media (max-width: 640px) {
     max-width: unset;
-    border-top-left-radius: 45px;
-    border-top-right-radius: 45px;
-    transition: 1.2s cubic-bezier(0, 1, 0, 1);
+    padding: 32px;
+    border-top-left-radius: 35px;
+    border-top-right-radius: 35px;
     transform: $panel-transition-mobile;
   }
 }
